# tank

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_TOURNAMENT_CHALLENGE.md  AI_TOURNAMENT_CHALLENGE_GEMINI.md  AI_TOURNAMENT_OPEN_CHALLENGE.md  ALGORITHMIC_EVOLUTION.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_CLEANUP.md  ARCHITECTURE_DEEP_DIVE.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_OVERVIEW.md  BEHAVIOR_DEVELOPMENT_GUIDE.md  CLAUDE.md  CODEBASE_CLEANUP_ANALYSIS.md  CODE_CLEANUP_REPORT.md  CODE_QUALITY_ANALYSIS.md  CODE_QUALITY_SUMMARY.txt  DEPLOYMENT_GUIDE.md  DISCOVERY_HUB_GUIDE.md  DISTRIBUTED_NETWORK_STATUS.md  Dockerfile  EVOLUTION_EXAMPLE.md  EVOLUTION_IMPROVEMENTS.md  EXPLORATION_SUMMARY.md  FRAGMENTED_CHANGELOG_DEV.md  HEADLESS_MODE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  KEY_CODE_SNIPPETS.md  LICENSE  PERFORMANCE_OPTIMIZATIONS.md  POKER_GAME_TEST_REPORT.md  POPULATION_EVALUATION_GEN10.md  QUICK_EVOLUTION_REFERENCE.md  QUICK_REFERENCE.md  QUICK_START.md  (+81 more)
.agent/: quality_improvements.md  refactoring_summary.md
.claude/: settings.json  settings.local.json
.github/: CODEOWNERS
backend/: README.md  __init__.py  app_factory.py  auto_save_service.py  broadcast.py  commentary_store.py  connection_manager.py  connection_persistence.py  discovery_service.py  entity_snapshot_builder.py  entity_transfer.py  logging_config.py  main.py  metrics_history.py  migration_handler.py  migration_scheduler.py  models.py  replay.py  requirements.txt  security.py  server_client.py  simulation_manager.py  simulation_runner.py  startup_manager.py  state_payloads.py  tank_persistence.py  tank_registry.py  tank_world_adapter.py  test_integration.py  transfer_history.py  world_broadcast_adapter.py  world_manager.py  world_persistence.py  world_registry.py  world_runner.py
benchmarks/: __init__.py
core/: __init__.py  agent_memory.py  agent_signals.py  agents_wrapper.py  algorithm_reporter.py  algorithm_validator.py  auto_evaluate_poker.py  behavior_algorithms.py  behavioral_learning.py  cache_manager.py  collision_system.py  color.py  constants.py  debug_trace.py  diagnostics.py  ecosystem.py  ecosystem_population.py  ecosystem_reporting.py  ecosystem_stats.py  ecosystem_telemetry.py  enhanced_statistics.py  entities.py  entity_factory.py  entity_ids.py  environment.py  events.py  exceptions.py  fish_communication.py  fish_memory.py  fish_poker.py  food_spawning_system.py  genetic_diversity_tracker.py  genetics.py  human_poker_game.py  interfaces.py  jellyfish_poker.py  lineage_tracker.py  math_utils.py  migration_protocol.py  mixed_poker.py  (+40 more)
data/: evolution_extended_200k.json  evolution_results_long.json  validation_improved.json
docs/: ADDING_GENE_DISTRIBUTION_GRAPHS.md  AGENT_FIELD_GUIDE.md  AGENT_QUICKSTART.md  ARCHITECTURE.md  ARCHITECTURE_QUALITY_IMPROVEMENTS.md  ARCHITECTURE_REFINEMENT_PLAN.md  ARCHITECTURE_REVIEW.md  BEHAVIOR_DEVELOPMENT_GUIDE.md  CLAUDE_CODE_EVOLUTION.md  CLEANUP_ANALYSIS.md  DECISION_LOG.md  DISTRIBUTED_ARCHITECTURE.md  EVOLVABILITY.md  EVO_CONTRIBUTING.md  HEADLESS_MODE.md  IMPROVEMENT_PROPOSALS.md  INDEX.md  LLM_FRACTAL_PLANT_CONTEST.md  MULTILEVEL_EVOLUTION_STRATEGY.md  MUTATION_OWNERSHIP_ANALYSIS.md  POKER_EVOLUTION_EXPERIMENT.md  POKER_SEAM_PROPOSAL.md  REFACTORING_ROADMAP.md  REPLAY.md  ROADMAP.md  SEPARATION_README.md  SOCCER_INTEGRATION_GUIDE.md  TANK_WORLD_NET_PHASE_4.md  UI_IMPROVEMENTS.md  UI_SPEC.md  VISION.md  WORLDS.md  entity_refactor_test_report.md  persistence.md  soccer_training.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  test-frontend.sh  tsconfig.app.json
logs/: backend_error_log.txt
rendering/: sprites.py  ui_renderer.py
results/: ai_tournament_results.json
scripts/: README.md  _download_lineage.py  _import_test.py  ai_code_evolution_agent.py  analyze_energy.py  analyze_population.py  analyze_sim.py  autoresearch.py  batch_fix_lineage.py  benchmark_performance.py  capture_first_solution.py  capture_gpt_5_2_solution.py  capture_sonnet45_improved.py  check_castle_size.py  check_imports.py  check_poker_payload.py  check_poker_summary.py  check_pycache.py  check_sim_engine.py  cleanup_tanks.py  debug_energy_flow.py  demo_evolution_loop.sh  diagnose.py  diagnose_evolution.py  diagnose_food_seeking.py  diagnose_poker_evolution.py  do_commit.py  evolution_viz.py  evolve_and_capture_sonnet45.py  evolve_gemini3_champion.py  final_nuke.py  final_nuke_v2.py  fix_lineage.py  generate_food_graphics.py  import_check.py  import_ecosystem_check.py  oracle_cloud_setup.sh  poker_eval_metrics.py  profile_poker_engine.py  profile_run.py  (+32 more)
solutions/: 07e88bb0_20251230_192538.json  0953378d_20251229_191701.json  0e4e7b3c_20251230_185924.json  133de727_20251229_173918.json  15fab6c7_20251230_173246.json  2ad5d201_20260103_191654.json  2e9c6046_20251229_222622.json  3b432fba_20251230_022803.json  3c8ae847_20251229_191554.json  603bca97_20251229_182751.json  603bca97_20251229_185408.json  6146a048_20251230_021927.json  685e413d_20251230_161935.json  740f5b12_20251230_164559.json  802f6384_20251229_213007.json  8e798df2_20260103_204658.json  9a2d4122_20251230_021543.json  9c5ef467_20251230_165305.json  9e4229f4_20251229_190007.json  README.md  a13833f1_20251229_182252.json  ai_tournament_report.txt  benchmark_report.txt  c5fd6fae_20251230_022214.json  c7812960_20251229_190850.json  comparison_results.json  d926087b_20260103_195809.json  e0c0ff8e_20251230_022510.json  e95f5f50_20251230_191527.json  ebdd0fb5_20251229_223153.json  fec218b7_20251230_180755.json  gemini_3.0_solution.json  live_2594_g119_05ab8b4d.json  tournament_report.txt
tests/: README.md  adaptive_diag.py  conftest.py  debug_discovery.py  debug_exact_diff.py  debug_restore_specific.py  debug_snapshots.py  debug_specific_snapshot.py  long_run_stress_result.txt  long_run_stress_test.py  manual_test_expert_strategy.py  manual_test_poker_game.py  meta_mutation_result.txt  meta_mutation_test.py  reproduce_issue_plant_removal.py  test_adapter_update_hot_path.py  test_agent_components.py  (+226 more)
(+745 files in other folders)
