[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core"]

[tool.setuptools.package-data]
core = ["py.typed"]

[project]
name = "fishtank-simulation"
version = "0.1.0"
description = "An artificial life ecosystem simulation with evolving fish behaviors"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Tank Team"}
]
keywords = ["simulation", "artificial-life", "evolution", "algorithms", "ecosystem", "genetic-algorithms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy>=1.20.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.6.0",  # Required for Python 3.13 compatibility
    "orjson>=3.10.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
ai = [
    "anthropic>=0.18.0",  # For AI Code Evolution with Claude
    "openai>=1.0.0",      # For AI Code Evolution with GPT-4
]

[project.scripts]
fishtank = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | node_modules
  | frontend
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "venv",
    "build",
    "dist",
    "node_modules",
    "frontend",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "E402",  # Module level import not at top of file (needed for sys.path setup)
    "E712",  # Comparison to True/False (intentional in test assertions for clarity)
    "N999",  # Invalid module name (BEHAVIOR_TEMPLATE is intentional)
    "F821",  # Undefined name in quotes (type hints with forward references)
    "B024",  # Abstract base class without abstract methods (marker classes are intentional)
    "B027",  # Empty method in abstract class (intentional default implementations)
    "E721",  # Type comparison with == (needed for comparing algorithm class types)
    "SIM102",  # Nested if statements (readability preference)
    "SIM103",  # Return boolean directly (readability preference - explicit returns are clearer)
    "SIM105",  # Use contextlib.suppress (try/except/pass is acceptable)
    "SIM108",  # Use ternary operator (readability preference)
    "N806",  # Variable in function should be lowercase (test constants are OK)
    "B007",  # Loop variable not used (intentional in some cases)
    "B904",  # raise from err (nice-to-have, not critical)
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
exclude = [
    "frontend/",
    "backend/",
    ".venv/",
    "venv/",
]

[tool.coverage.run]
source = ["core", "simulators"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
